# composer

./: Cargo.toml
src/: config.rs  data_base_manager.rs  error.rs  login.rs  main.rs  mp3_handler.rs  static_asset_manager.rs  upload.rs
templates/: SubmitResponse.html.tera  mp3SubmitForm.html.tera
web_assets/: config.json  style.css
web_assets/templates/: LoginForm.html.tera  SubmitResponse.html.tera  mp3SubmitForm.html.tera
