[package]
name = "composer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
libsql-rusqlite = "0.33.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tera = "1.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
