[package]
name = "composer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
target-cpu = "native"
panic = "abort"
debug = false
lto = true
codegen-units = 1

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
tera = "1.20.0"
xmlparser = "0.13.6"
reqwest = "0.12.8"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
id3 = "1.14.0"
